[tool.poetry]
name = "dcmapi"
version = "0.1.0"
description = ""
authors = ["sinhye kim <sinhyekim@rsupport.com>"]

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.14.2"
rsa = "^4.9"
locust-plugins = "^3.0.1"
Brotli = "^1.0.9"
pandas = "^1.5.2"
pycryptodome = "^3.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
